--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Django==1.6
+PyYAML==3.10
 dj-database-url==0.2.2
 dj-static==0.0.5
 django-toolbelt==0.0.1
 gunicorn==18.0
 psycopg2==2.5.1
 static==0.4
+textblob==0.8.1
 wsgiref==0.1.2
